# vllm-image-builder

./: .gitignore  Cargo.toml  RAPTOR_LEANN_PLAN.md  README.md
.github/scripts/: verify-feature-consistency.sh
.github/workflows/: README-release-cli.md  RELEASE-GUIDE.md  core.yml  image-build.yml  llm-d-image-build.yml  middleware-image-build.yml  publish_crate.yml  publish_pypi.yml  python.yml  release-cli.yml  test-llm-d-patch.yml  vllm-gce.yml
Formula/: spnl.rb
crates/spnl/: Cargo.toml
crates/spnl-cli/: Cargo.toml
crates/spnl-cli/src/: args.rs  builtins.rs  main.rs
crates/spnl-cli/src/bench/: haystack.rs  mod.rs  niah.rs  ragcsv.rs  ruler.rs
crates/spnl-cli/src/builtins/: chat.rs  rag.rs
crates/spnl-core/: Cargo.toml
crates/spnl-core/src/: lib.rs
crates/spnl-core/src/ir/: generate.rs  message.rs  pretty_print.rs
crates/spnl-core/src/optimizer/: mod.rs  simplify.rs
crates/spnl-core/src/optimizer/llo/: chat_template.rs  tokenize.rs
crates/spnl-ffi/: Cargo.toml  pyproject.toml
crates/spnl-ffi/src/: python.rs
crates/spnl-run/: Cargo.toml
crates/spnl-run/src/: lib.rs
crates/spnl-run/src/augment/: embed.rs  mod.rs  options.rs  retrieve.rs
crates/spnl-run/src/augment/index/: layer1.rs  mod.rs  raptor.rs
crates/spnl-run/src/execute/: mod.rs  pull.rs
crates/spnl-run/src/generate/: mod.rs  options.rs
crates/spnl-run/src/generate/backend/: mod.rs  openai.rs  prettynames.rs  spnl.rs
crates/spnl-run/src/generate/backend/mistralrs/: embed.rs  loader.rs  mod.rs
crates/spnl-run/src/optimizer/: hlo.rs  mod.rs
crates/spnl-run/src/vllm/: patch.rs
crates/spnl-run/src/vllm/gce/: args.rs  down.rs  image.rs  up.rs
crates/spnl/src/: lib.rs
docker/: Dockerfile.cuda  Dockerfile.middleware  vllm-version
docker/gce/vllm/: cloud-config.yaml  create-vllm-gce-image.sh  setup-dev.sh
docker/vllm/llm-d/: Containerfile.cuda  clone.sh  defaults.env  genpatch.sh
docs/: cli.md
middleware/: model_defs.yaml  spans_middleware.py
