[package]
name = "spnl-cli"
version = "0.21.0"
edition = "2024"

[[bin]]
name = "spnl"
path = "src/main.rs"

[features]
rag = ["spnl/rag", "dep:itertools"]
spnl-api = ["spnl/spnl-api"]
rag-deep-debug = ["spnl/rag-deep-debug"]
openssl-vendored = ["spnl/openssl-vendored"]
vllm = ["spnl/vllm"]
k8s = ["spnl/k8s", "vllm"]
gce = ["spnl/gce", "vllm"]
local = ["spnl/local", "dep:tabled"]
metal = ["local","spnl/metal"]
cuda = ["local","spnl/cuda"]
cuda-flash-attn = ["local","spnl/cuda-flash-attn"]
cuda-flash-attn-v3 = ["local","spnl/cuda-flash-attn-v3"]
bench = ["dep:criterion", "dep:lipsum", "dep:petname", "dep:dirs", "dep:csv", "dep:rand", "dep:reqwest", "dep:indicatif", "dep:tokenizers"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
itertools = { version = "0.14.0", optional = true }
ptree = { version = "0.5.2", default-features = false, features = ["ansi"] }
rustyline = { version = "17.0.0", features = ["with-file-history"] }
serde = "1.0.219"
serde_json = "1.0.140"
spnl = { version = ">=0.1.0", path = "../spnl" }
tabled = { version = "0.20", optional = true }
tinytemplate = "1.2.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }

# bench dependencies
criterion = { version = "0.8", features = ["async_tokio"], optional = true }
csv = { version = "1.3", optional = true }
dirs = { version = "6.0", optional = true }
indicatif = { version = "0.18.0", optional = true }
lipsum = { git = "https://github.com/mgeisler/lipsum.git", optional = true }
petname = { version = "2.0.2", optional = true }
rand = { version = "0.9.2", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
tokenizers = { version = "0.22.0", default-features = false, features = ["onig", "esaxx_fast", "hf-hub", "http"], optional = true }
