[package]
name = "spnl-core"
version = "0.22.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/IBM/spnl"
description = "Core IR types, simplify transforms, and capabilities for SPNL."
include = [
    "src/**/*",
    "Cargo.toml",
]

[features]
default = ["cli_support","lisp","yaml"]
cli_support = ["print","dep:ptree"]
print = []
lisp = ["dep:serde-lexpr"]
yaml = ["dep:serde_yaml2"]
tok = ["dep:pyo3","dep:itertools","dep:moka","dep:tokenizers","dep:thiserror"]
rag = []

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.45", features = ["derive","env"] }
derive_builder = "0.20.2"
ptree = { version = "0.5.2", default-features = false, features = ["ansi"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-lexpr = { version = "0.1.3", optional = true }
serde_yaml2 = { version = "0.1.3", optional = true }

# tok dependencies
pyo3 = { version = "0.28.0", features = ["macros"], optional = true }
tokenizers = { version = "0.22.0", default-features = false, features = ["onig", "esaxx_fast", "hf-hub", "http"], optional = true }
itertools = { version = "0.14.0", optional = true }
moka = { version = "0.12.10", features = ["sync"], optional = true }
thiserror = { version = "2.0.14", optional = true }

[dev-dependencies]
cargo-husky.workspace = true
serde_json = "1.0"
