[package]
name = "spnl-ffi"
version = "0.22.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/IBM/spnl"
description = "Python FFI bindings for SPNL."

[lib]
name = "spnl_ffi"
crate-type = ["cdylib", "rlib"]

[features]
default = []
pypi = ["dep:pyo3","pyo3/extension-module"]
run_py = ["pypi","spnl-run/run","spnl-run/openai","spnl-run/ollama","spnl-run/gemini","pyo3/experimental-async","dep:tokio","dep:serde_json"]
tok = ["spnl-core/tok"]

[dependencies]
spnl-core = { version = "0.22.0", path = "../spnl-core", default-features = false }
spnl-run = { version = "0.22.0", path = "../spnl-run", default-features = false }
pyo3 = { version = "0.28.0", features = ["macros"], optional = true }
tokio = { version = "1.44.1", features = ["rt-multi-thread"], optional = true }
serde_json = { version = "1.0.140", optional = true }
