[package]
name = "spnl-run"
version = "0.22.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/IBM/spnl"
description = "Execution engine and backend dispatch for SPNL queries."
include = [
    "src/**/*",
    "Cargo.toml",
]

[features]
default = ["cli_support","lisp","run","ollama","openai","gemini","pull","yaml"]
cli_support = ["print","spnl-core/cli_support"]
print = ["spnl-core/print"]
lisp = ["spnl-core/lisp"]
yaml = ["spnl-core/yaml"]
ollama = ["openai"]
openai = ["dep:async-openai","dep:tokio"]
gemini = ["openai"]
local = ["run","dep:mistralrs","dep:tokio","dep:uuid","dep:indexmap","dep:either","dep:reqwest"]
metal = ["local","mistralrs/metal"]
cuda = ["local","mistralrs/cuda"]
cuda-flash-attn = ["cuda","mistralrs/flash-attn"]
cuda-flash-attn-v3 = ["cuda","dep:mistralrs-core","mistralrs-core/flash-attn-v3"]
openssl-vendored = ["dep:openssl"]
pull = ["dep:reqwest","dep:tokio-util"]
ffi = []
rag = ["run","spnl-core/rag","dep:sha2","dep:leann-core","dep:ndarray","dep:itertools","dep:pdf-extract","dep:async-recursion","dep:regex","dep:rand","dep:tokio","tokio/rt-multi-thread"]
rag-deep-debug = []
run = ["dep:futures","dep:indicatif","dep:async-recursion","dep:thiserror","dep:tabled"]
tok = ["spnl-core/tok"]
spnl-api = ["dep:futures","dep:reqwest"]
vllm = ["yaml", "dep:flate2"]
k8s = ["vllm","dep:kube","dep:k8s-openapi","dep:schemars","dep:rustls","dep:uuid","dep:tokio-stream","dep:tokio","dep:futures","dep:serde_yaml2"]
gce = ["vllm","dep:google-cloud-compute-v1","dep:google-cloud-lro","dep:google-cloud-storage","dep:tokio","dep:base64","dep:flate2","dep:uuid","dep:rustls","dep:sha2","yaml","dep:russh","dep:russh-keys","dep:async-trait","dep:tabled"]

[dependencies]
spnl-core = { version = "0.22.0", path = "../spnl-core", default-features = false }

uuid = { version = "1.19.0", features = ["v4"], optional = true }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"], optional = true }
schemars = { version = "1", optional = true }
rustls = { version = "0.23.36", default-features = false, features = ["ring"], optional = true }
kube = { version = "3.0.0", default-features = false, features = ["client", "runtime", "rustls-tls", "ring", "ws"], optional = true }
google-cloud-compute-v1 = { version = "2.1.0", features = ["instances", "images"], optional = true }
google-cloud-lro = { version = "1.3.0", optional = true }
google-cloud-storage = { version = "1", optional = true }
russh = { version = "0.57", optional = true }
russh-keys = { version = "0.49", optional = true }
async-trait = { version = "0.1", optional = true }

serde = { version = "1.0.219", features = ["derive"] }
async-openai = { version = "0.33.0", features=["embedding","chat-completion","completions","_api"], optional = true }
async-recursion = {version = "1.1.1", optional = true }
futures = { version = "0.3.31", optional = true }
indicatif = { version = "0.18.0", optional = true }
tokio = { version = "1.44.1", features = ["io-std", "io-util", "signal"], optional = true }
tokio-stream = { version = "0.1.18", features = ["net"], optional = true }
tokio-util = { version = "0.7.16", optional = true }
anyhow = { version = "1.0.98" }
leann-core = { version = "0.1.7", optional = true, default-features = false, features = ["parallel", "bm25", "pdf"] }
ndarray = { version = "0.17", optional = true }
either = { version = "1.13", optional = true }
indexmap = { version = "2.7.0", optional = true }
itertools = { version = "0.14.0", optional = true }
pdf-extract = { version = "0.10.0", optional = true }
serde_json = { version = "1.0.140" }
sha2 = { version = "0.10.9", optional = true }
mistralrs = { version = "0.7.0", git = "https://github.com/EricLBuehler/mistral.rs", rev = "dd8d0c6f9dc2fe3129ff4228de667e2a0efcf5b4", optional = true }
mistralrs-core = { version = "0.7.0", git = "https://github.com/EricLBuehler/mistral.rs", rev = "dd8d0c6f9dc2fe3129ff4228de667e2a0efcf5b4", optional = true, default-features = false }
hf-hub = { version = "0.4.3", features = ["tokio"], optional = true }
derive_builder = "0.20.2"
reqwest = { version = "0.12.20", features = ["json", "stream"], optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
thiserror = { version = "2.0.14", optional = true }
clap = { version = "4.5.45", features = ["derive","env"] }
regex = { version = "1.11.1", optional = true }
rand = { version = "0.9.2", features = ["os_rng"], optional = true }
base64 = { version = "0.22", optional = true }
flate2 = { version = "1.0", optional = true }
tabled = { version = "0.20", optional = true }
serde_yaml2 = { version = "0.1.3", optional = true }

[dev-dependencies]
cargo-husky.workspace = true
tower-test = "0.4"
http = "1.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
serde_json = "1.0"
